# tree-sitter-eventb

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  binding.gyp  grammar.js  package-lock.json  package.json  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-eventb.pc.in
bindings/c/tree_sitter/: tree-sitter-eventb.h
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
docs/: LINGUIST.md
examples/: bank_account_machine.eventb  counter.eventb  simple_machine.eventb  traffic_light_machine.eventb
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/: tokens.json  tokens.test.js
test/corpus/: smoke.txt
