[package]
name = "tree-sitter-eventb"
description = "Event-B lexical grammar for tree-sitter (Rossi)"
version = "0.1.0"
authors = ["Rossi Contributors"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "eventb"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/eventb-rossi/tree-sitter-eventb"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE-MIT",
  "/LICENSE-APACHE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.9"
